tests/paczka1/fuzzy1/47587684.err
Error in line 4: 9v8osQvEQ S72 19,5
Error in line 13: STtDcB A894 -4,6
Error in line 23: QeNoDFJ965 A274 28,5
Error in line 33: QeNoDFJ965 S72 27,67
Error in line 30: QeNoDFJ965 S828 39,3
